<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondaryActivity">

    <Button
        android:id="@+id/left"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/left" />

    <Button
        android:id="@+id/right"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="75dp"
        android:text="@string/right" />

    <Button
        android:id="@+id/forward"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/forward" />

    <Button
        android:id="@+id/backward"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/back" />

    <EditText
        android:id="@+id/dist"
        android:layout_width="313dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:hint="@string/enter_dist"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/name"
        android:layout_width="313dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/run_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/action"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="320dp"
        android:text="@string/action"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="320dp"
        android:text="@string/dist"
        android:textSize="20sp"
            android:textColor="@color/black" />

    <Button
        android:id="@+id/save"
        android:layout_width="313dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/save" />

</RelativeLayout>